# langchain-practice

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
assistant/: README.md  main.py
assistant/config/: settings.py
assistant/core/: llm.py  prompts.py
assistant/services/: generator.py
conversationai/: README.md  main.py
conversationai/config/: settings.py
conversationai/core/: llm.py  memory.py  prompts.py
conversationai/services/: agent_logic.py  parsers.py  tools.py
